List all Companys endpoint
